PV2 se agrega el footer master

--- a/inicio.css
+++ b/inicio.css
@@ -7,3 +7,8 @@ body{
     text-align: center;
     font-size: medium;
 }
+footer{
+    color:aquamarine;
+    text-align: center;
+    font-size: medium;
+}
